--- a/app/src/main/res/layout/histo_layout.xml
+++ b/app/src/main/res/layout/histo_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="200dp">
 
     <TextView
-        android:id="@+id/patientName"
+        android:id="@+id/histoName"
         android:layout_width="90dp"
         android:layout_height="45dp"
         android:layout_alignParentTop="true"
@@ -15,86 +15,85 @@
         android:text="Name"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/txt_patho"
+        app:layout_constraintBottom_toTopOf="@+id/txt_histopatho"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/patientPathology"
+        android:id="@+id/histoPathology"
         android:layout_width="90dp"
         android:layout_height="45dp"
-        android:layout_below="@+id/patientName"
+        android:layout_below="@+id/histoName"
         android:layout_marginEnd="24dp"
         android:text="Pathology"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_patho"
-        app:layout_constraintEnd_toStartOf="@+id/txt_treat"
-        app:layout_constraintTop_toTopOf="@+id/txt_patho"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_histopatho"
+        app:layout_constraintEnd_toStartOf="@+id/txt_histotreat"
+        app:layout_constraintTop_toTopOf="@+id/txt_histopatho"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/patientTreatments"
+        android:id="@+id/histoTreatments"
         android:layout_width="90dp"
         android:layout_height="45dp"
-        android:layout_below="@+id/patientDate"
+        android:layout_below="@+id/histoDate"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="24dp"
-        android:layout_toEndOf="@+id/patientPathology"
+        android:layout_toEndOf="@+id/histoPathology"
         android:text="Treatments"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_treat"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_histotreat"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txt_treat" />
+        app:layout_constraintTop_toTopOf="@+id/txt_histotreat" />
 
     <TextView
-        android:id="@+id/patientDate"
+        android:id="@+id/histoDate"
         android:layout_width="101dp"
         android:layout_height="45dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="100dp"
-        android:layout_toEndOf="@+id/patientName"
+        android:layout_toEndOf="@+id/histoName"
         android:text="Date"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/txt_treat"
+        app:layout_constraintBottom_toTopOf="@+id/txt_histotreat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/patientToday"
+        android:id="@+id/histoToday"
         android:layout_width="266dp"
         android:layout_height="52dp"
-        android:layout_below="@+id/patientPathology"
+        android:layout_below="@+id/histoPathology"
         android:layout_alignParentStart="true"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="16dp"
         android:text="Today"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/txt_patho"
+        android:id="@+id/txt_histopatho"
         android:layout_width="83dp"
         android:layout_height="44dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
         android:text="Pathologie : "
-        app:layout_constraintBottom_toTopOf="@+id/patientToday"
-        app:layout_constraintEnd_toStartOf="@+id/patientPathology"
+        app:layout_constraintBottom_toTopOf="@+id/histoToday"
+        app:layout_constraintEnd_toStartOf="@+id/histoPathology"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/txt_treat"
+        android:id="@+id/txt_histotreat"
         android:layout_width="86dp"
         android:layout_height="44dp"
         android:layout_marginBottom="16dp"
         android:text="Traitement : "
-        app:layout_constraintBottom_toTopOf="@+id/patientToday"
-        app:layout_constraintEnd_toStartOf="@+id/patientTreatments" />
+        app:layout_constraintBottom_toTopOf="@+id/histoToday"
+        app:layout_constraintEnd_toStartOf="@+id/histoTreatments" />
 
     <View
         android:layout_width="match_parent"
