--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,42 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
     <EditText
         android:id="@+id/et_email"
-        style="@style/viewCustom"
-        android:ems="10"
+        android:layout_width="350dp"
+        android:layout_height="40dp"
         android:hint="@string/email"
-        android:inputType="textEmailAddress" />
+        app:layout_constraintBottom_toTopOf="@+id/et_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.789" />
+
     <EditText
         android:id="@+id/et_password"
-        style="@style/viewCustom"
-        android:layout_below="@id/et_email"
-        android:ems="10"
+        android:layout_width="350dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="16dp"
         android:hint="@string/password"
-        android:inputType="textPassword" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/et_key"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
+        android:hint="AliasKey"
+        app:layout_constraintBottom_toTopOf="@+id/btn_addK"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/btn_login"
-        style="@style/viewCustom"
-        android:layout_below="@id/et_password"
-        android:background="@color/colorAccent"
-        android:text="@string/login_title"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/tv_forgot_password"
-        style="@style/viewCustom"
-        android:layout_below="@id/btn_login"
-        android:clickable="true"
-        android:gravity="center_horizontal"
-        android:text="Forgot Password?"
-        android:textSize="20sp" />
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
+        android:text="LOGIN"
+        app:layout_constraintBottom_toTopOf="@+id/btn_register_account"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/btn_register_account"
-        style="@style/viewCustom"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorAccent"
-        android:text="@string/create_act"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" />
-</RelativeLayout>
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="72dp"
+        android:text="REGISTER"
+        app:layout_constraintBottom_toTopOf="@+id/et_key"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/btn_addK"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="184dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/ic_input_add" />
+</androidx.constraintlayout.widget.ConstraintLayout>
